test/expected/explain_nrfi_v-c++-error.out
explain noreturn void f(int)
        ^
9: error: "noreturn" keyword not supported in C++; did you mean [[noreturn]]?
